cmake_minimum_required(VERSION 3.26)
project(BaekJoon)

set(CMAKE_CXX_STANDARD 14)

add_executable(BaekJoon
        "1009 분산처리.cpp"
        "1011 Fly me to the Alpha Centauri.cpp"
        "10162 전자레인지.cpp"
        "1018 체스판 다시 칠하기.cpp"
        "1037 약수.cpp"
        "10773 제로.cpp"
        "10814 나이순 정렬.cpp"
        "10816 숫자 카드 2.cpp"
        "11004 K번째 수.cpp"
        "11034 캥거루 3마리2.cpp"
        "11050 이항 계수 1.cpp"
        "11403 경로 찾기.cpp"
        "11404 플로이드.cpp"
        "11650 좌표 정렬하기.cpp"
        "11651 좌표 정렬하기2.cpp"
        "11780 플로이드 2.cpp"
        "1181 단어 정렬.cpp"
        "11866 요세푸스 문제 0.cpp"
        "11931 수 정렬하기 4.cpp"
        "12605 단어순서 뒤집기.cpp"
        "13241 최소공배수.cpp"
        "13420 사칙연산.cpp"
        "13424 비밀 모임.cpp"
        "1343 폴리오미노.cpp"
        "13771 Presents.cpp"
        "1389 케빈 베이컨의 6단계 법칙.cpp"
        "1427 소트인사이드.cpp"
        "1436 영화감독 숌.cpp"
        "14720 우유 축제.cpp"
        "14915 진수 변환기.cpp"
        "15688 수 정렬하기 5.cpp"
        "15819 너의 핸들은.cpp"
        "16135 OBB (Oriented bounding box).cpp"
        "1654 랜선 자르기.cpp"
        "1676 팩토리얼 0의 개수.cpp"
        "1708 블록 껍질.cpp"
        "1719 택배.cpp"
        "17478 재귀함수가 뭔가요물음표.cpp"
        "1764 듣보잡.cpp"
        "1822 차집합.cpp"
        "18258 큐 2.cpp"
        "1874 스택 수열.cpp"
        "19087 모음의 수.cpp"
        "1920 수 찾기.cpp"
        "1929 소수 구하기.cpp"
        "1934 최소공배수.cpp"
        "1966 프린터 큐.cpp"
        "1978 소수 찾기.cpp"
        "20499 Darius님 한타 안 함물음표.cpp"
        "2075 N번째 큰 수.cpp"
        "2108 통계학.cpp"
        "2164 카드2.cpp"
        "2167 2차원 배열의 합.cpp"
        "2204 도비의 난독증 테스트.cpp"
        "2309 일곱 난쟁이.cpp"
        "2440 별 찍기 - 3.cpp"
        "2441 별 찍기 - 4.cpp"
        "2442 별 찍기 - 5.cpp"
        "2443 별 찍기 - 6.cpp"
        "2444 별 찍기 7.cpp"
        "2605 줄 세우기.cpp"
        "2609 최대공약수와 최소공배수.cpp"
        "2693 N번째 큰 수.cpp"
        "2720 세탁소.cpp"
        "2776 암기왕.cpp"
        "2805 나무 자르기.cpp"
        "2851 슈퍼 마리오.cpp"
        "4949 균형잡힌 세상.cpp"
        "5576 콘테스트.cpp"
        "5585 거스름돈.cpp"
        "5635 생일.cpp"
        "5639 이진 검색 트리.cpp"
        "6996 애너그램.cpp"
        "7568 덩치.cpp"
        "7785 회사에 있는 사람.cpp"
        "9012 괄호.cpp"
        "9076 점수 집계.cpp"
        "9655 돌 게임.cpp"
        "9946 단어 퍼즐.cpp"
        "18110 solved.ac.cpp"
        "11279 최대 힙.cpp"
        "11723 집합.cpp")
